{
    "name": "GameInputActions",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "53135cb6-2da1-44f4-9709-9f3f0a59b045",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "665dcd45-d963-42cf-b0ba-3f567ecff732",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "ec9038aa-5588-470c-8b41-89ff7bea769d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cb56af00-3bd6-4fc5-97a6-bc054f5dc64d",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "10c68be7-af47-4530-9bb9-74ba4a95e0ec",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6eb2a3c0-ff5d-40b0-9649-4c6017bb8876",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}